# shakespeare-in-a-toaster

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-web.yml
docs/superpowers/plans/: 2026-07-02-web-version.md
src/toaster/: __init__.py  cli.py
src/toaster/data/: lexicon.json  portrait.txt
src/toaster/engine/: __init__.py  composer.py  constants.py  lexicon.py  rhyme.py
src/toaster/tui/: app.py  dialogs.py  sonnet_view.py
tests/: test_engine.py  test_tui.py
web/: build.sh  wrangler.jsonc
web/public/: app.js  engine.js  index.html  style.css
web/test/: engine.test.js
web/tools/: make_vevey.py
